--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,6 +38,11 @@ jobs:
         path: build/reports/**/*
     - name: testReport
       run: ./gradlew jacocoTestReport
+    - name: Publish Test Report
+      uses: mikepenz/action-junit-report@v3
+      if: always() # always run even if the previous step fails
+      with:
+        report_paths: '**/build/test-results/test/TEST-*.xml'
     - name: sonarcloud
       run: ./gradlew sonarqube
       env:
