--- a/kirimaru-redis/build.gradle
+++ b/kirimaru-redis/build.gradle
@@ -28,23 +28,14 @@ generateLombokConfig.enabled = false
 
 dependencies {
     implementation project(':kirimaru-core')
-    implementation project(':kirimaru-redis')
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
-    // Database
-    implementation 'org.flywaydb:flyway-core'
-    runtimeOnly 'com.h2database:h2'
-    runtimeOnly 'org.postgresql:postgresql'
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 
-    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
-    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.0'
-
-    testImplementation 'org.testcontainers:junit-jupiter:1.16.0'
-    testImplementation 'org.testcontainers:postgresql:1.16.0'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.testcontainers:junit-jupiter:1.17.4'
 
     // coreのテストソースコードだけ依存させる
-//    testCompileOnly project(':kirimaru-core').sourceSets.test.output
     testImplementation project(':kirimaru-core').sourceSets.test.output
 }
 
