--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@
 //}
 rootProject.name = 'kirimaru'
 
+include 'kirimaru-redis'
 include 'kirimaru-e2e'
 include 'kirimaru-repository'
 include 'kirimaru-backend'
