--- a/kirimaru-backend/src/test/resources/application-common.yml
+++ b/kirimaru-backend/src/test/resources/application-common.yml
@@ -3,5 +3,5 @@ app:
     appName: "Kirimaru"
     local: "true"
 logging.level:
-  root: DEBUG
-  org.springframework.web: DEBUG
+  root: "DEBUG"
+  org.springframework.web: "DEBUG"
