--- a/kirimaru-repository/src/test/resources/application-repository-ut.yml
+++ b/kirimaru-repository/src/test/resources/application-repository-ut.yml
@@ -5,3 +5,6 @@ spring:
     url: jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
     username: user
     password: pass
+logging:
+  level:
+     kirimaru.biz.mapper: TRACE
