--- a/kirimaru-backend/src/main/resources/application-local.yml
+++ b/kirimaru-backend/src/main/resources/application-local.yml
@@ -12,6 +12,8 @@ spring:
     username: user
     password: pass
     initialization-mode: always
+  jackson.default-property-inclusion: NON_EMPTY # 空データは0として扱う
+
   flyway:
     schemas: test
     locations: classpath:db/migration,db/dev
