--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        springBootVersion = "2.7.4"
-        springDependencyManagementVersion = "1.0.14.RELEASE"
+        springBootVersion = "3.0.3"
+        springDependencyManagementVersion = "1.1.0"
     }
 }
 
