--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: Linter CI
 
 on: [push]
 
@@ -6,7 +6,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Docker lint
-      run: |
-        docker run --rm -i ghcr.io/hadolint/hadolint < Dockerfile
+      - uses: actions/checkout@v3
+      - uses: hadolint/hadolint-action@v3.1.0
+        with:
+          dockerfile: Dockerfile
+        #     Dockerで使用するならこれでOK
+        #     - name: Docker lint
+        #       run: |
+        #         docker run --rm -i ghcr.io/hadolint/hadolint < Dockerfile
