--- a/.github/workflows/launchable.yml
+++ b/.github/workflows/launchable.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # フルクローンする必要がある
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
@@ -28,3 +30,10 @@ jobs:
           pip install launchable
       - name: verify
         run: launchable verify
+      - name: record build
+        run: launchable record build --name ${GITHUB_RUN_ID}
+      - name: Run tests
+        run: gradle test
+      - name: launchable record tests
+        run: launchable record tests gradle target/surefire-reports/TEST-example.*.xml
+        if: always()
