--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -48,11 +48,12 @@ jobs:
       uses: actions/setup-python@v4 # Launchableに必要
       with:
         python-version: "3.10"
-    - name: Launchable JDK 1.8 Set Up
-      uses: actions/setup-java@v3 # Launchableに必要
-      with:
-        distribution: 'adopt'
-        java-version: '8'
+# JDK17入っているから不要？
+#    - name: Launchable JDK 1.8 Set Up
+#      uses: actions/setup-java@v3 # Launchableに必要
+#      with:
+#        distribution: 'adopt'
+#        java-version: '8'
     - name: Install launchable command
       run: |
         pip install launchable
