--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -6,24 +6,8 @@ env:
   LAUNCHABLE_TOKEN: ${{ secrets.LAUNCHABLE_TOKEN }}
 
 jobs:
-  build:
-
+  setup:
     runs-on: ubuntu-latest
-
-    # redisのコンテナを立てる？
-    # https://docs.github.com/ja/actions/using-containerized-services/creating-redis-service-containers
-    # Service containers to run with `container-job`
-#    services:
-#      redis:
-#        image: redis
-#        ports:
-#          - 6379:6379
-#        options: >-
-#          --health-cmd "redis-cli ping"
-#          --health-interval 10s
-#          --health-timeout 5s
-#          --health-retries 5
-
     steps:
     - uses: actions/checkout@v3
       with:
@@ -51,25 +35,33 @@ jobs:
       uses: actions/setup-python@v4 # Launchableに必要
       with:
         python-version: "3.10"
-# JDK17入っているから不要？
-#    - name: Launchable JDK 1.8 Set Up
-#      uses: actions/setup-java@v3 # Launchableに必要
-#      with:
-#        distribution: 'adopt'
-#        java-version: '8'
     - name: Install launchable command
       run: |
         pip install launchable
-    - name: sudo
-      run: sudo chmod +x ./gradlew
-    - name: Build with Gradle
-      env:
-        GITHUB: true
-      run: ./gradlew build
+
+  test:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+    # redisのコンテナを立てる？
+    # https://docs.github.com/ja/actions/using-containerized-services/creating-redis-service-containers
+    # Service containers to run with `container-job`
+#    services:
+#      redis:
+#        image: redis
+#        ports:
+#          - 6379:6379
+#        options: >-
+#          --health-cmd "redis-cli ping"
+#          --health-interval 10s
+#          --health-timeout 5s
+#          --health-retries 5
     - name: test
+      uses: gradle/gradle-build-action@v2
       env:
         GITHUB: true
-      run: ./gradlew test
+      with:
+        arguments: test
     - if: always()
       name: Upload test result
       uses: actions/upload-artifact@v3
@@ -87,13 +79,6 @@ jobs:
       run: ./gradlew sonarqube
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_SONAR }}
-    - name: verify
-      run: launchable verify
-    - name: record build
-      run: launchable record build --name ${GITHUB_RUN_ID}
-    - name: launchable record tests
-      run: launchable record tests gradle build/test-results/test/TEST-*.xml
-      if: always()
 
 #  analyze:
 #    runs-on: ubuntu-latest
@@ -119,3 +104,31 @@ jobs:
 #      with:
 #        name: report-dir
 #        path: qodana-report
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: build
+        uses: gradle/gradle-build-action@v2
+        env:
+          GITHUB: true
+        with:
+          arguments: build
+  lint:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: hadolint/hadolint-action@v3.1.0
+        with:
+          dockerfile: Dockerfile
+  launchable:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: verify
+        run: launchable verify
+      - name: record build
+        run: launchable record build --name ${GITHUB_RUN_ID}
+      - name: launchable record tests
+        run: launchable record tests gradle build/test-results/test/TEST-*.xml
+        if: always()
