--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,6 +12,11 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0 # Launchableのために、フルクローンする必要がある
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: my-artifact
+        path: /path/to/my/file
     - name: Cache gradle modules
       uses: actions/cache@v3
       env:
@@ -56,7 +61,11 @@ jobs:
 #          --health-interval 10s
 #          --health-timeout 5s
 #          --health-retries 5
-
+    - name: Download artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: my-artifact
+        path: /path/to/downloaded/file
     - name: sudo
       run: sudo chmod +x ./gradlew
     - name: Build with Gradle
@@ -120,6 +129,11 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: my-artifact
+          path: /path/to/downloaded/file
       - name: build
         run: ./gradlew build
 #         uses: gradle/gradle-build-action@v2
