--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,11 +12,11 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0 # Launchableのために、フルクローンする必要がある
-    - name: Upload artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: my-artifact
-        path: /path/to/my/file
+#     - name: Upload artifact
+#       uses: actions/upload-artifact@v2
+#       with:
+#         name: my-artifact
+#         path: /path/to/my/file
     - name: Cache gradle modules
       uses: actions/cache@v3
       env:
@@ -61,11 +61,13 @@ jobs:
 #          --health-interval 10s
 #          --health-timeout 5s
 #          --health-retries 5
-    - name: Download artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: my-artifact
-        path: /path/to/downloaded/file
+
+#     - name: Download artifact
+#       uses: actions/download-artifact@v2
+#       with:
+#         name: my-artifact
+#         path: /path/to/downloaded/file
+    - uses: actions/checkout@v3
     - name: sudo
       run: sudo chmod +x ./gradlew
     - name: Build with Gradle
@@ -129,11 +131,7 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: my-artifact
-          path: /path/to/downloaded/file
+      - uses: actions/checkout@v3
       - name: build
         run: ./gradlew build
 #         uses: gradle/gradle-build-action@v2
@@ -145,6 +143,7 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: Dockerfile
@@ -152,6 +151,7 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: verify
         run: launchable verify
       - name: record build
