--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -68,6 +68,11 @@ jobs:
 #         name: my-artifact
 #         path: /path/to/downloaded/file
     - uses: actions/checkout@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: 17
     - name: sudo
       run: sudo chmod +x ./gradlew
     - name: Build with Gradle
