--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -137,6 +137,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: sudo
+        run: sudo chmod +x ./gradlew
       - name: build
         run: ./gradlew build
 #         uses: gradle/gradle-build-action@v2
@@ -157,10 +159,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: 17
+#    - name: docker images
+#      working-directory: tools
+#      run: docker-compose build redis
+      - name: Launchable Python Set Up
+        uses: actions/setup-python@v4 # Launchableに必要
+        with:
+          python-version: "3.10"
+      - name: Install launchable command
+        run: |
+          pip install launchable
       - name: verify
         run: launchable verify
       - name: record build
         run: launchable record build --name ${GITHUB_RUN_ID}
-      - name: launchable record tests
+      - name: launchable record tests # おそらく、TESTファイルは共有されていない
         run: launchable record tests gradle build/test-results/test/TEST-*.xml
         if: always()
