--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -6,7 +6,7 @@ env:
   LAUNCHABLE_TOKEN: ${{ secrets.LAUNCHABLE_TOKEN }}
 
 jobs:
-  setup:
+  setup: # setupの環境が共有されないから意味がない？
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -137,6 +137,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: 17
       - name: sudo
         run: sudo chmod +x ./gradlew
       - name: build
