--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,54 +1,19 @@
 name: Java CI
 
 on: [push]
-
-env:
-  LAUNCHABLE_TOKEN: ${{ secrets.LAUNCHABLE_TOKEN }}
+# 手動実行：
+#  workflow_dispatch:
+#    inputs:
+#      name:
+#        description: 'Name'
+#        required: true
 
 jobs:
-  setup: # setupの環境が共有されないから意味がない？
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0 # Launchableのために、フルクローンする必要がある
-#     - name: Upload artifact
-#       uses: actions/upload-artifact@v2
-#       with:
-#         name: my-artifact
-#         path: /path/to/my/file
-    - name: Cache gradle modules
-      uses: actions/cache@v3
-      env:
-        cache-name: cache-gradle-modules
-      with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: 17
-#    - name: docker images
-#      working-directory: tools
-#      run: docker-compose build redis
-    - name: Launchable Python Set Up
-      uses: actions/setup-python@v4 # Launchableに必要
-      with:
-        python-version: "3.10"
-    - name: Install launchable command
-      run: |
-        pip install launchable
-
   test:
-    needs: setup
-    runs-on: ubuntu-latest
+    uses: ./.github/workflows/setup/java.yml
     steps:
-    # redisのコンテナを立てる？
+
+      # redisのコンテナを立てる？
     # https://docs.github.com/ja/actions/using-containerized-services/creating-redis-service-containers
     # Service containers to run with `container-job`
 #    services:
@@ -67,12 +32,6 @@ jobs:
 #       with:
 #         name: my-artifact
 #         path: /path/to/downloaded/file
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: 17
     - name: sudo
       run: sudo chmod +x ./gradlew
     - name: Build with Gradle
@@ -161,24 +120,8 @@ jobs:
           dockerfile: Dockerfile
   launchable:
     needs: test
-    runs-on: ubuntu-latest
+    uses: ./.github/workflows/setup/launchable.yml
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: 17
-#    - name: docker images
-#      working-directory: tools
-#      run: docker-compose build redis
-      - name: Launchable Python Set Up
-        uses: actions/setup-python@v4 # Launchableに必要
-        with:
-          python-version: "3.10"
-      - name: Install launchable command
-        run: |
-          pip install launchable
       - name: verify
         run: launchable verify
       - name: record build
