--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -6,46 +6,46 @@ env:
   LAUNCHABLE_TOKEN: ${{ secrets.LAUNCHABLE_TOKEN }}
 
 jobs:
-  setup: # setupの環境が共有されないから意味がない？
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0 # Launchableのために、フルクローンする必要がある
-#     - name: Upload artifact
-#       uses: actions/upload-artifact@v2
-#       with:
-#         name: my-artifact
-#         path: /path/to/my/file
-    - name: Cache gradle modules
-      uses: actions/cache@v3
-      env:
-        cache-name: cache-gradle-modules
-      with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: 17
-#    - name: docker images
-#      working-directory: tools
-#      run: docker-compose build redis
-    - name: Launchable Python Set Up
-      uses: actions/setup-python@v4 # Launchableに必要
-      with:
-        python-version: "3.10"
-    - name: Install launchable command
-      run: |
-        pip install launchable
+#  setup: # setupの環境が共有されないから意味がない？
+#    runs-on: ubuntu-latest
+#    steps:
+#    - uses: actions/checkout@v3
+#      with:
+#        fetch-depth: 0 # Launchableのために、フルクローンする必要がある
+##     - name: Upload artifact
+##       uses: actions/upload-artifact@v2
+##       with:
+##         name: my-artifact
+##         path: /path/to/my/file
+#    - name: Cache gradle modules
+#      uses: actions/cache@v3
+#      env:
+#        cache-name: cache-gradle-modules
+#      with:
+#        path: |
+#          ~/.gradle/caches
+#          ~/.gradle/wrapper
+#        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+#        restore-keys: |
+#          ${{ runner.os }}-gradle-
+#    - name: Set up JDK 17
+#      uses: actions/setup-java@v3
+#      with:
+#        distribution: 'temurin'
+#        java-version: 17
+##    - name: docker images
+##      working-directory: tools
+##      run: docker-compose build redis
+#    - name: Launchable Python Set Up
+#      uses: actions/setup-python@v4 # Launchableに必要
+#      with:
+#        python-version: "3.10"
+#    - name: Install launchable command
+#      run: |
+#        pip install launchable
 
   test:
-    needs: setup
+#    needs: setup
     runs-on: ubuntu-latest
     steps:
     # redisのコンテナを立てる？
@@ -68,11 +68,13 @@ jobs:
 #         name: my-artifact
 #         path: /path/to/downloaded/file
     - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: 17
+#    - name: Set up JDK 17
+#      uses: actions/setup-java@v3
+#      with:
+#        distribution: 'temurin'
+#        java-version: 17
+    - name: setup
+      uses: ./.github/actions/setup/java
     - name: sudo
       run: sudo chmod +x ./gradlew
     - name: Build with Gradle
