--- a/.github/actions/setup/launchable/action.yml
+++ b/.github/actions/setup/launchable/action.yml
@@ -4,6 +4,7 @@ env:
   LAUNCHABLE_TOKEN: ${{ secrets.LAUNCHABLE_TOKEN }}
 
 jobs:
+  using: "composite"
   setup:
     runs-on: ubuntu-latest
     steps:
