--- a/.github/actions/setup/java/action.yml
+++ b/.github/actions/setup/java/action.yml
@@ -13,9 +13,11 @@ jobs:
         path: |
           ~/.gradle/caches
           ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+#        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        key: linux-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
         restore-keys: |
-          ${{ runner.os }}-gradle-
+          linux-gradle-
+#          ${{ runner.os }}-gradle-
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
