--- a/.github/actions/setup/java/action.yml
+++ b/.github/actions/setup/java/action.yml
@@ -14,7 +14,7 @@ jobs:
           ~/.gradle/caches
           ~/.gradle/wrapper
 #        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-        key: linux-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        key: linux-gradle-gradle
         restore-keys: |
           linux-gradle-
 #          ${{ runner.os }}-gradle-
