--- a/.github/actions/setup/java/action.yml
+++ b/.github/actions/setup/java/action.yml
@@ -5,7 +5,7 @@ name: Java Set Up
 #    required: true
 runs:
   using: "composite"
-  runs-on: ubuntu-latest
+#  runs-on: ubuntu-latest
   steps:
   - uses: actions/checkout@v3
   - name: Cache gradle modules
