--- a/.github/actions/setup/launchable/action.yml
+++ b/.github/actions/setup/launchable/action.yml
@@ -5,7 +5,7 @@ env:
 
 runs:
   using: "composite"
-  runs-on: ubuntu-latest
+#  runs-on: ubuntu-latest
   steps:
   - uses: actions/checkout@v3
     with:
