--- a/.github/actions/setup/java/action.yml
+++ b/.github/actions/setup/java/action.yml
@@ -1,8 +1,10 @@
 name: Java Set Up
-#inputs:
-#  environment:
-#    description: "deploy environment"
-#    required: true
+inputs:
+  runner:
+    description: '動作環境'
+  gradle-hash:
+    description: 'Gradleファイルのハッシュ'
+
 runs:
   using: "composite"
 #  runs-on: ubuntu-latest
@@ -18,10 +20,12 @@ runs:
         ~/.gradle/caches
         ~/.gradle/wrapper
 #        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-      key: linux-gradle-gradle
+#      key: linux-gradle-gradle
+      key: ${{ inputs.runner.os }}-gradle-${{ gradle-hash }}
       restore-keys: |
-        linux-gradle-
+#        linux-gradle-
 #          ${{ runner.os }}-gradle-
+          ${{ inputs.runner.os }}-gradle-
   - name: Set up JDK 17
     uses: actions/setup-java@v3
     with:
