--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -76,7 +76,7 @@ jobs:
     - name: setup
       uses: ./.github/actions/setup/java
       with:
-        runner: ${{ runner }}
+        runner-os: ${{ runner.os }}
         gradle-hash: ${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
     - name: sudo
       run: sudo chmod +x ./gradlew
