--- a/.github/actions/setup/java/action.yml
+++ b/.github/actions/setup/java/action.yml
@@ -27,9 +27,10 @@ runs:
 #      key: linux-gradle-gradle
       key: ${{ inputs.runner-os }}-gradle-${{ inputs.gradle-hash }}
       restore-keys: |
-#        linux-gradle-
+        linux-gradle-
 #          ${{ runner.os }}-gradle-
-          ${{ inputs.runner-os }}-gradle-
+        # TODO: これが動かない
+#        ${{ inputs.runner-os }}-gradle-
   - name: Set up JDK 17
     uses: actions/setup-java@v3
     with:
