--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = "3.0.3"
+        springBootVersion = "3.1.0"
         springDependencyManagementVersion = "1.1.0"
     }
 }
@@ -31,9 +31,9 @@ subprojects {
 }
 task jacocoRootReport(type: JacocoReport){
     dependsOn = subprojects.test
-    reports {
-        html.enabled = true
-        xml.enabled = true
-        csv.enabled =false
-    }
+//    reports {
+//        html.enabled = true
+//        xml.enabled = true
+//        csv.enabled =false
+//    }
 }
