--- a/kirimaru-backend/build.gradle
+++ b/kirimaru-backend/build.gradle
@@ -138,11 +138,11 @@ test {
 }
 
 jacocoTestReport {
-//    reports {
-//        xml.enabled true
-//        html.enabled true
-//        csv.enabled false
-//    }
+    reports {
+        xml.required = true
+        html.required = true
+        csv.required = false
+    }
 }
 /**
  * cucumberを動かすタスク
