--- a/kirimaru-redis/build.gradle
+++ b/kirimaru-redis/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-    id 'org.springframework.boot' version '2.6.4'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version "${springBootVersion}"
+    id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
     id 'java'
-    id 'io.freefair.lombok' version '5.3.3.3'
+    id 'io.freefair.lombok' version '8.0.1'
 }
 
 group 'kirimaru'
@@ -24,7 +24,7 @@ jar {
     enabled = true
 }
 
-generateLombokConfig.enabled = false
+//generateLombokConfig.enabled = false
 
 dependencies {
     implementation project(':kirimaru-core')
