--- a/kirimaru-repository/build.gradle
+++ b/kirimaru-repository/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.6.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
-    id 'io.freefair.lombok' version '5.3.3.3'
+    id 'io.freefair.lombok' version '8.0.1'
 }
 
 group 'kirimaru'
@@ -24,7 +24,7 @@ jar {
     enabled = true
 }
 
-generateLombokConfig.enabled = false
+//generateLombokConfig.enabled = false
 
 dependencies {
     implementation project(':kirimaru-core')
@@ -37,7 +37,7 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 
-    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.1'
 
     testImplementation 'org.testcontainers:junit-jupiter:1.17.6'
