--- a/kirimaru-redis/src/main/resources/application-redis-local.yml
+++ b/kirimaru-redis/src/main/resources/application-redis-local.yml
@@ -1,6 +1,8 @@
-spring.redis:
-  database: 0
-  host: localhost
-  port: 6379
-  password: null
-  timeout: 200
+spring:
+  data:
+    redis:
+      database: 0
+      host: localhost
+      port: 6379
+      password: null
+      timeout: 200
