--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -148,8 +148,8 @@ jobs:
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: 21
+          distribution: temurin
+          java-version: 21-ea
       - name: sudo
         run: sudo chmod +x ./gradlew
       - name: build
