--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -145,11 +145,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 21
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-version: 21-ea
+          java-version: 17
       - name: sudo
         run: sudo chmod +x ./gradlew
       - name: build
