--- a/kirimaru-core/build.gradle
+++ b/kirimaru-core/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-    id 'org.springframework.boot' version '2.7.0'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version "${springBootVersion}"
+    id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
     id 'java'
-    id 'io.freefair.lombok' version '8.0.1'
+    id 'org.projectlombok' version "${lombokVersion}"
 }
 
 bootJar {
