やっぱり戻す

--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,9 @@ subprojects {
     }
 
     java {
-        targetCompatibility = JavaVersion.VERSION_21
-        sourceCompatibility = JavaVersion.VERSION_21
+        // TODO: 21にアップデートしたい
+        targetCompatibility = JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_17
     }
 
     compileJava {
