--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     ext {
         springBootVersion = "3.1.4"
         springDependencyManagementVersion = "1.1.3"
-        lombokVersion = "1.18.30"
+//        lombokVersion = "1.18.30"
     }
 }
 
